2010-08-27  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        SVGLocatable.getScreenCTM ignores scrolling
        https://bugs.webkit.org/show_bug.cgi?id=44083

        getScreenCTM needs to include the FrameViews scrollOffset in the e/f parameters of the AffineTransform.
        Adding three new tests, which cover scrolling & getScreenCTM in large svgs with scrollbars, and with (nested) divs in overflow="scroll" mode.

        Tests: svg/custom/getscreenctm-in-scrollable-div-area-nested.xhtml
               svg/custom/getscreenctm-in-scrollable-div-area.xhtml
               svg/custom/getscreenctm-in-scrollable-svg-area.xhtml

        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::localCoordinateSpaceTransform):

2010-08-27  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        SVGLocatable.getScreenCTM ignores scrolling
        https://bugs.webkit.org/show_bug.cgi?id=44083

        * platform/mac/svg/custom/getscreenctm-in-scrollable-div-area-expected.checksum: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-div-area-expected.png: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-div-area-expected.txt: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-div-area-nested-expected.checksum: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-div-area-nested-expected.png: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-div-area-nested-expected.txt: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-svg-area-expected.checksum: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-svg-area-expected.png: Added.
        * platform/mac/svg/custom/getscreenctm-in-scrollable-svg-area-expected.txt: Added.
        * svg/custom/getscreenctm-in-scrollable-div-area-nested.xhtml: Added.
        * svg/custom/getscreenctm-in-scrollable-div-area.xhtml: Added.
        * svg/custom/getscreenctm-in-scrollable-svg-area.xhtml: Added.


Canonical link: https://commits.webkit.org/56959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66187 268f45cc-cd09-0410-ab3c-d52691b4dbfc